--- a/source/_posts/2020-05-07-机械设计大赛.md
+++ b/source/_posts/2020-05-07-机械设计大赛.md
@@ -10,7 +10,10 @@ top: 0
 
  # 机械创新设计大赛
 
-<!-- more --> <p style="text-align:center;">所属院系 机械工程系</p>
+<!-- more -->
+
+ <p style="text-align:center;">所属院系 机械工程系</p>
+
  ## 赛事主题
 
 &emsp;&emsp;机械设计大赛的目的是为了鼓励学生创新能力的发挥，主要考虑参赛作品的创新性、功能的实现性、作品的可靠性、建议性、易人性、环境友好性等方面。所以，大赛在命题的选择上，往往不会提出一些制作复杂，技术难度大的题目。例如往年的爬杆机器人、踢足球机器人、机械人运送乒乓球、堆积木机器人、跳高机器人、休闲娱乐机械和校园、家庭用机械的设计和制作、独木桥对抗机器人，以及今年的物流行业设备完善等。不管是命题式还是主题式的命题，都会留给参赛选手很大的发挥空间。
